packages/govuk-frontend/src/govuk/components/file-upload/_index.scss
@import "../error-message/index";
@import "../hint/index";
@import "../label/index";

@include govuk-exports("govuk/component/file-upload") {
  $file-upload-border-width: 2px;
  $component-padding: govuk-spacing(1);

  .govuk-file-upload {
    @include govuk-font($size: 19);
    @include govuk-text-colour;
    max-width: 100%;
    margin-left: -$component-padding;
    padding: $component-padding;

    // The default file upload button in Safari does not support setting a
    // custom font-size. Set `-webkit-appearance` to `button` to drop out of the
    // native appearance so the font-size is set to 19px
    // https://webkit.org/b/224746
    &::-webkit-file-upload-button {
      -webkit-appearance: button;
      color: inherit;
      font: inherit;
    }

    &:focus {
      outline: $govuk-focus-width solid $govuk-focus-colour;
      // Use `box-shadow` to add border instead of changing `border-width`
      // (which changes element size) and since `outline` is already used for
      // the yellow focus state.
      box-shadow: inset 0 0 0 4px $govuk-input-border-colour;
    }

    // Set "focus-within" to fix https://bugzil.la/1430196 so that component
    // receives focus in Firefox.
    // This can't be set together with `:focus` as all versions of IE fail
    // to recognise `focus-within` and don't set any styles from the block
    // when it's a selector.
    &:focus-within {
      outline: $govuk-focus-width solid $govuk-focus-colour;

      box-shadow: inset 0 0 0 4px $govuk-input-border-colour;
    }

    &:disabled {
      opacity: 0.5;
      cursor: not-allowed;
    }
  }

  .govuk-file-upload-wrapper {
    display: block;
    position: relative;
    z-index: 0;
    background-color: $govuk-body-background-colour;
  }

  .govuk-file-upload-wrapper--disabled {
    cursor: not-allowed;
  }

  .govuk-frontend-supported .govuk-file-upload-wrapper .govuk-file-upload {
    position: absolute;
    // Make the native control take up the entire space of the element, but
    // invisible and behind the other elements until we need it
    z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    opacity: 0;
  }

  .govuk-frontend-supported .govuk-file-upload-wrapper .govuk-file-upload--dragging {
    z-index: 1;
  }

  .govuk-file-upload__pseudo-button {
    width: auto;
    margin-right: govuk-spacing(2);
    margin-bottom: $govuk-border-width-form-element + 1;
    flex-shrink: 0;
  }

  .govuk-file-upload__instruction {
    margin-top: govuk-spacing(2) - ($govuk-border-width-form-element + 1);
    margin-bottom: 0;
    text-align: left;
  }

  .govuk-file-upload__status {
    display: block;
    margin-bottom: govuk-spacing(2);
    padding: govuk-spacing(3) govuk-spacing(2);
    text-align: left;
  }

  .govuk-file-upload__status--empty {
    color: govuk-shade(govuk-colour("blue"), 60%);
    background-color: govuk-tint(govuk-colour("blue"), 70%);
  }

  // bugs documented with button using flex
  // https://github.com/philipwalton/flexbugs#flexbug-9
  // so we need a container here
  .govuk-file-upload__pseudo-button-container {
    display: flex;
    align-items: baseline;
    flex-wrap: wrap;
  }

  .govuk-file-upload__button {
    width: 100%;
    // align the padding to be same as notification banner and error summary accounting for the thicker borders
    padding: (govuk-spacing(3) + $govuk-border-width - $file-upload-border-width);
    border: $file-upload-border-width govuk-colour("mid-grey") dashed;
    background-color: govuk-colour("white");
    cursor: pointer;

    @include govuk-media-query($from: tablet) {
      padding: (govuk-spacing(4) + $govuk-border-width - $file-upload-border-width);
    }
  }

  .govuk-file-upload__button:disabled {
    pointer-events: none;
    opacity: 0.5;
  }

  .govuk-file-upload__button--dragging:not(:disabled),
  .govuk-file-upload__button:hover {
    border-color: govuk-shade(govuk-colour("mid-grey"), 20%);
    background-color: govuk-colour("light-grey");
  }

  .govuk-file-upload__button--dragging:not(:disabled) .govuk-file-upload__pseudo-button,
  .govuk-file-upload__button:hover .govuk-file-upload__pseudo-button {
    background-color: govuk-shade(govuk-colour("light-grey"), 10%);
  }

  .govuk-file-upload__button--dragging:not(:disabled) {
    border: $file-upload-border-width solid govuk-colour("black");
  }

  .govuk-file-upload__button--dragging:not(:disabled) .govuk-file-upload__status--empty,
  .govuk-file-upload__button:hover .govuk-file-upload__status--empty,
  .govuk-file-upload__button:focus .govuk-file-upload__status--empty {
    background-color: govuk-tint(govuk-colour("blue"), 80%);
  }

  .govuk-file-upload__button--dragging .govuk-file-upload__pseudo-button {
    background-color: govuk-colour("white");
  }

  .govuk-file-upload__button:active,
  .govuk-file-upload__button:focus {
    border: $file-upload-border-width solid govuk-colour("black");
    outline: $govuk-focus-width solid $govuk-focus-colour;
    // Ensure outline appears outside of the element
    outline-offset: 0;
    background-color: govuk-colour("light-grey");
    // Double the border by adding its width again. Use `box-shadow` for this
    // instead of changing `border-width` - this is for consistency with
    // components such as textarea where we avoid changing `border-width` as
    // it will change the element size. Also, `outline` cannot be utilised
    // here as it is already used for the yellow focus state.
    box-shadow: inset 0 0 0 $govuk-border-width-form-element;
  }

  .govuk-file-upload__button:focus .govuk-file-upload__pseudo-button {
    background-color: $govuk-focus-colour;
    box-shadow: 0 2px 0 govuk-colour("black");
  }

  .govuk-file-upload__button:focus:hover .govuk-file-upload__pseudo-button {
    border-color: $govuk-focus-colour;
    outline: 3px solid transparent;
    background-color: govuk-colour("light-grey");
    box-shadow: inset 0 0 0 1px $govuk-focus-colour;
  }
}

